# pyusb-tree

./: MANIFEST.in  README.md  example.py  pyproject.toml
pyusb_tree/: __init__.py  parser.py
